--- a/css/select_box.css
+++ b/css/select_box.css
@@ -83,6 +83,8 @@ p{
 	z-index: 1;
 }
 
+.checkbox-tools-yes-no:checked,
+.checkbox-tools-yes-no:not(:checked),
 .checkbox-tools:checked,
 .checkbox-tools:not(:checked){
 	position: absolute;
@@ -113,6 +115,30 @@ p{
 	text-align: center;
 	border-radius: 4px;
 	overflow: hidden;
+	cursor: pointer;
+	vertical-align: middle;
+}
+
+.checkbox-tools-yes-no:checked + label,
+.checkbox-tools-yes-no:not(:checked) + label{
+	position: relative;
+    align-items: center;
+	justify-content: center;
+	flex-direction: column;
+	padding: 10px;
+	height: 20px;
+	font-size: 14px;
+	line-height: 20px;
+	letter-spacing: 1px;
+	/* margin: 0; */
+	/* margin: 0 auto; */
+	margin-left: 10px;
+	margin-right: 2px;
+	margin-bottom: 5px;
+	/* width: 70px; */
+	text-align: center;
+	border-radius: 4px;
+	/* overflow: hidden; */
 	cursor: pointer;
 	vertical-align: middle;
 }
@@ -167,10 +193,20 @@ p{
 	vertical-align: middle;
 }
 
+.checkbox-tools-yes-no:checked + label,
 .checkbox-tools:checked + label{
 	/* background-color: transparent; */
     /* box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2); */
 	background-color: white;
+	border-radius: 10px;
+    -webkit-transition: all 300ms linear;
+    transition: all 300ms linear; 
+}
+
+.checkbox-tools-severity:checked + label{
+	background-color: transparent;
+    /* box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2); */
+	color: var(--white);
 	border-radius: 10px;
     -webkit-transition: all 300ms linear;
     transition: all 300ms linear; 
@@ -197,6 +233,9 @@ p{
     -webkit-transition: all 300ms linear;
     transition: all 300ms linear; 
 }
+
+.checkbox-tools-yes-no:checked + label::before,
+.checkbox-tools-yes-no:not(:checked) + label::before,
 .checkbox-tools:checked + label::before,
 .checkbox-tools:not(:checked) + label::before{
 	position: absolute;
@@ -288,6 +327,7 @@ p{
 	box-shadow: 0 1x 4px 0 rgba(0, 0, 0, 0.05);
 }
 
+.checkbox-tools-yes-no:not(:checked) + label,
 .checkbox-tools:not(:checked) + label{
 	border-radius: 10px;
 	background-color: var(--white);
