--- a/css/select_box.css
+++ b/css/select_box.css
@@ -13,6 +13,7 @@
 	--insertion: #64c466;
 	--deletion: #ee2a2a;
 	--split: #F7CE46;
+	--selection: #0071e3;
 }
 
 /* #Primary
@@ -56,6 +57,7 @@ p{
     padding-left: 2px;
     padding-right: 2px;
 	width: 33%;
+	vertical-align: top;
 }
 
 .row {
@@ -103,8 +105,8 @@ p{
 	flex-direction: column;
 	padding: 10px;
 	/* width: 115px; */
-	height: 60px;
-	font-size: 20px;
+	height: 70px;
+	font-size: 16px;
 	line-height: 20px;
 	letter-spacing: 1px;
 	/* margin: 0; */
@@ -151,9 +153,8 @@ p{
 	justify-content: center;
 	flex-direction: column;
 	padding: 10px;
-	/* width: 198px; */
 	height: 70px;
-	font-size: 14px;
+	font-size: 15px;
 	line-height: 20px;
 	letter-spacing: 1px;
 	/* margin: 0; */
@@ -193,6 +194,7 @@ p{
 	vertical-align: middle;
 }
 
+.checkbox-tools-severity:checked + label,
 .checkbox-tools-yes-no:checked + label,
 .checkbox-tools:checked + label{
 	/* background-color: transparent; */
@@ -203,33 +205,38 @@ p{
     transition: all 300ms linear; 
 }
 
-.checkbox-tools-severity:checked + label{
-	background-color: transparent;
-    /* box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2); */
-	color: var(--white);
-	border-radius: 10px;
-    -webkit-transition: all 300ms linear;
-    transition: all 300ms linear; 
-}
-
+.checkbox-tools-yes-no:checked + label.question-split,
+.checkbox-tools:checked + label.question-split,
 .checkbox-tools:checked + label.txt-split{
 	border: 2px solid var(--split);
 }
 
+.checkbox-tools-yes-no:checked + label.question-deletion,
+.checkbox-tools:checked + label.question-deletion,
 .checkbox-tools:checked + label.txt-deletion{
 	border: 2px solid var(--deletion);
 }
 
+.checkbox-tools-yes-no:checked + label.question-paraphrase,
+.checkbox-tools:checked + label.question-paraphrase,
 .checkbox-tools:checked + label.txt-paraphrase{
 	border: 2px solid var(--paraphrase);
 }
 
+.checkbox-tools-yes-no:checked + label.question-insertion,
+.checkbox-tools:checked + label.question-insertion,
 .checkbox-tools:checked + label.txt-insertion{
 	border: 2px solid var(--insertion);
 }
 
+.checkbox-tools-yes-no:not(:checked) + label:hover {
+    box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.2);
+    -webkit-transition: all 300ms linear;
+    transition: all 300ms linear; 
+}
+
 .checkbox-tools:not(:checked) + label:hover{
-    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+    box-shadow: 0 3px 8px 0 rgba(0, 0, 0, 0.2);
     -webkit-transition: all 300ms linear;
     transition: all 300ms linear; 
 }
@@ -299,18 +306,6 @@ p{
 
 #error-10-label::before {
 	background-color: #FF80CC
-}
-
-#severity-1-label::before {
-	background-image: linear-gradient(298deg, var(--red), var(--yellow));
-}
-
-#severity-2-label::before {
-	background-image: linear-gradient(298deg, var(--red), var(--yellow));
-}
-
-#severity-3-label::before {
-	background-image: linear-gradient(298deg, var(--red), var(--yellow));
 }
 
 .checkbox-tools:checked + label .uil,
