--- a/css/index.css
+++ b/css/index.css
@@ -204,3 +204,66 @@
 .prev-next-btns:hover {
     opacity: 0.6;
 }
+
+.tooltiptext {
+    visibility: hidden;
+    width: 13px;
+    font-size: 10px;
+    text-align: center;
+    /* border-radius: 6px; */
+    padding: 1px 0;
+    position: absolute;
+    z-index: 1;
+    bottom: 100%;
+    left: -15%;
+    /* margin-left: -60px; */
+    /* Fade in tooltip - takes 1 second to go from 0% to 100% opac: */
+    opacity: 0;
+    transition: opacity 0.4s;
+  }
+
+.circle {
+    border-radius: 50%;
+    border: 0.9px solid #DDDDDD;
+    width: 10px;
+    height: 10px;
+    display: inline-block;
+    margin-right: 0.5rem;
+    background-color: #DDDDDD;
+    transition: all 0.2s ease-in-out;
+    position: relative;
+}
+
+.circle:hover { 
+    border: 1.1px solid black;
+    transform: scale(1.15); 
+}
+
+.circle:hover .tooltiptext {
+    visibility: visible;
+    opacity: 1;
+  }
+
+.circle-active {
+    border: 1.1px solid black !important;
+    transform: scale(1.15); 
+}
+
+.circle-bookmark {
+    background-color: rgb(255, 82, 82);
+    border-color: rgb(255, 82, 82);
+}
+
+.circle-finished {
+    background-color: rgb(31, 227, 41);
+    border-color: rgb(31, 227, 41);
+}
+
+
+.tooltiptext-bookmark {
+    color:rgb(255, 82, 82)
+}
+
+.tooltiptext-finished {
+    color:rgb(31, 227, 41)
+}
