--- a/css/button.css
+++ b/css/button.css
@@ -831,6 +831,18 @@
   transition: all 0.3s ease;
 }
 
+.comment_button {
+  position: relative;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 0px 0px 0 0px rgba(0, 0, 0, 0);
+  -moz-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+  border-color: #57b846;
+  color: #57b846;
+}
+
 .fa-1-5x {
   font-size: 1.5em;
 }
