--- a/css/index.css
+++ b/css/index.css
@@ -1,27 +1,13 @@
 .container {
-    padding-left: 2rem;
-    padding-right: 2rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
     padding-bottom: 1rem;
   }
   
 .card {
-    margin: 1rem;
-    /* background-color: #f8f9fa;
-    border: 1px solid #d9dadb; */
     border-radius: 4px;
-  
-    max-width: 1100px;
     margin-left: auto;
     margin-right: auto;
-}
-  
-.card-header {
-    width: 100%;
-    background-color: rgba(0, 0, 0, .03);
-    text-decoration: none;
-    padding: .75rem 1.25rem;
-    border-bottom: 1px solid #d9dadb;
-    display: flex;
 }
   
 .card-body {
@@ -275,4 +261,34 @@
 .bookmark-active {
     color:rgb(255, 82, 82);
     background-color: rgb(255, 82, 82)
+}
+
+
+#response_box {
+    position: fixed;
+    top: 10%;
+    left: 80%;
+}
+
+.w2-5 {
+    width: 2.3em;
+}
+
+.h2-5 {
+    height: 2.3em;
+}
+
+.comment_area {
+    position: relative;
+    display: block;
+    font-size: 16px;
+    line-height: 1.2;
+    border-color: #57b846;
+    height: 120px;
+    width: 260px;
+}
+
+textarea {
+    outline: none;
+    /* border: none; */
 }
