--- a/css/qual.css
+++ b/css/qual.css
@@ -98,7 +98,39 @@ iframe {
     cursor: default;
     margin-top: 5px;
 }
-
 .deletion-examples-active {
     background-color: #F4B8B1;
+}
+
+.quiz-answer a {
+    margin-right: 2rem;
+    color: #222222;
+    color: inherit;
+    text-decoration: inherit;
+    font-weight: 600;
+    --tw-text-opacity: 1;
+    color: rgba(2,132,199,var(--tw-text-opacity));
+    box-sizing: border-box;
+    border: 0 solid;
+    color: inherit;
+    background-color: transparent;
+}
+.quiz-answer {
+    box-shadow: inset 0 -0.05em 0 0 #fff, inset 0 -0.25em 0 0 #c8c8c8;
+    margin-left: 7%;
+    font-weight: bold;
+    font-size: 20px;
+}
+.answer-container {
+    padding-bottom: 16px;
+}
+img.span_selection_quiz_answer {
+    position: absolute;
+    display: none;
+    margin-top: 16px;
+    margin-left: 300px;
+    border-radius: 0.5rem;
+    border-color: rgba(0,0,0,.8);
+    border-style: solid;
+    border-width: 2px;
 }
