--- a/css/qual.css
+++ b/css/qual.css
@@ -76,7 +76,7 @@ img {
 .column-substitution {
     min-width: 100px;
 }
-.column-insertion {
+.column-insertion, .column-structure {
     min-width: 150px;
 }
 .column-severity label {
@@ -165,4 +165,7 @@ img.span_selection_quiz_answer {
 }
 .no-edit-explain {
     margin: 16px 0 0 0 !important;
+}
+.edit .txt-structure {
+    padding-right: 12px;
 }
